--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/material-nextjs": "^5.15.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet.heat": "^0.2.0",
     "next": "latest",
     "pocketbase": "^0.19.0",
     "react": "latest",
     "react-dom": "latest",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
