--- a/package.json
+++ b/package.json
@@ -15,18 +15,23 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@mui/material-nextjs": "^5.15.0",
+    "@tanstack/react-query": "^5.17.19",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet.heat": "^0.2.0",
+    "lodash": "^4.17.21",
     "next": "latest",
+    "nuqs": "^1.15.4",
     "pocketbase": "^0.19.0",
     "react": "latest",
     "react-dom": "latest",
     "react-leaflet": "^4.2.1",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "usehooks-ts": "^2.9.5"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
+    "@types/lodash": "^4.14.202",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
