--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
+    "prisma": "^5.9.1",
     "tailwindcss": "latest",
     "typescript": "latest"
   }
