--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@mui/material": "^5.15.0",
     "@mui/material-nextjs": "^5.15.0",
     "@tanstack/react-query": "^5.17.19",
+    "drizzle-orm": "^0.29.3",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet.heat": "^0.2.0",
     "lodash": "^4.17.21",
     "next": "latest",
     "nuqs": "^1.15.4",
-    "pocketbase": "^0.19.0",
+    "pg": "^8.11.3",
     "react": "latest",
     "react-dom": "latest",
     "react-leaflet": "^4.2.1",
@@ -33,13 +34,14 @@
     "@types/leaflet": "^1.9.8",
     "@types/lodash": "^4.14.202",
     "@types/node": "latest",
+    "@types/pg": "^8.11.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
+    "drizzle-kit": "^0.20.14",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
-    "prisma": "^5.9.1",
     "tailwindcss": "latest",
     "typescript": "latest"
   }
